--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="ur" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>ذہنی ریمائنڈر اردو ایپ</title>
+  <title>ذہنی ریمائنڈر اردو</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="manifest" href="manifest.json">
   <style>
